# CGyak

./: .gitignore  CMakeLists.txt  README.md
Projects/Basics/: DecisionMaking.c  MatrixDiagonalSum.c  NumericalFormats.c  Stdin.c
Projects/Basics/Headers/: Numerical.h
Projects/HelloWorld/: CMakeLists.txt
